@@ -5,8 +5,9 @@ lilv (0.24.5) unstable;
   * Don't print errors when saving state if correct links already exist
   * Fix issues with loading state with saved files from the model
   * Add option to override LV2_PATH in applications
+  * Fix unit tests on Windows
 
- -- David Robillard <d@drobilla.net>  Sun, 14 Apr 2019 09:52:48 +0200
+ -- David Robillard <d@drobilla.net>  Mon, 15 Apr 2019 23:04:06 +0200
 
 lilv (0.24.4) stable;
 
